--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@
     li,a{
     text-decoration:none;
     }
+    .gradient-text {
+      background: linear-gradient(90.72deg, #44649F 0%, #2DACDE 50.67%, #44649f 100.79%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: rgba(0, 0, 0, 0);
+    }
     #mobile-nav {
         width: 100%;
         height: 100vh;
@@ -50,4 +56,117 @@
         to {
           translate: 13px 13px;
         }
+      }
+      .hero-shape {
+        width: auto;
+        position: absolute;
+        color: transparent;
+        filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 30%)) blur(0.7px);
+        transform: rotate(45deg);
+        animation: shape_move 5s linear infinite alternate;
+      }
+      .hero-shape-blur {
+        filter:drop-shadow(0px 0px 10px rgba(0 0 0 / 30%)) blur(0.9px);
+
+      }
+      @keyframes shape_move {
+        from {
+          translate: 0 0;
+        }
+      
+        to {
+          translate: 13px 33px;
+        }
+      }
+          /* Stepper styling */
+      .stepper-circle {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        border: .1rem solid #014c7d;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .stepper-circle-checked {
+        border-width: 5px;
+      }
+      .stepper-line {
+        width: 0.2rem;
+        height: 4em;
+        background-color: #e6e8eb;
+      }
+
+          /* Detail styling */
+      .details{
+        --padding: 10px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #e6e8eb;
+        margin-bottom: 5px;
+      }
+
+      .details + .details{
+        margin-top: 15px;
+      }
+
+      .details__title{
+        --width: 20px;
+        --height: 3px;
+        --radius: 1px;
+        --color: #014c7d;
+        margin:0;
+        padding: var(--padding) calc(var(--width) * 2) var(--padding) var(--padding);
+        cursor: pointer;
+        transition: all .2s ease-in-out;
+        position: relative;
+      }
+
+      .details__title:before,
+      .details__title:after{
+        content:'';
+        display: block;
+        width: var(--width);
+        height: var(--height);
+        background-color: var(--color);
+        position: absolute;
+        border-radius: var(--radius);
+        top: calc(50% - (var(--height) / 2));
+        right: calc(var(--width) / 2);
+        transition: all .2s ease-in-out;
+      }
+
+      .details__title:after{
+        rotate: 90deg;
+      }
+
+      .details__container[open] .details__title:before{
+        rotate: 45deg;
+        /* rotate: 135deg; */
+      }
+
+      .details__container[open] .details__title:after{
+        rotate: 135deg;
+        /* rotate: 225deg; */
+      }
+
+      .details__summary::marker{
+        content:'';
+      }
+
+      .details__desc{
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: all .2s ease-in-out;
+        overflow: hidden;
+        padding-inline: var(--padding);
+        pointer-events: none;
+      }
+
+      .details__container[open] + .details__desc{
+        grid-template-rows: 1fr;
+        padding-block: var(--padding);
+      }
+
+      .details__desc-inner{
+        min-height: 0;
       }
