--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+  /* Resetters */
 *,*:before,*:after{
 
     padding:0;
@@ -13,12 +14,6 @@
     outline:none
     
     }
-    /* button,input[type="submit"]{
-    
-    outline:none;
-    border:none;
-    
-    } */
     input[type="submit"]{
     cursor:pointer;    
     }
@@ -42,6 +37,7 @@
         z-index: 999;
         padding: 0 1rem;
     }
+      /* Hero secgtion styling */
     .hero-img {
         animation-duration: 2s;
         animation-name: move;
@@ -57,6 +53,7 @@
           translate: 13px 13px;
         }
       }
+        /* Hero shapes styling */
       .hero-shape {
         width: auto;
         position: absolute;
@@ -141,12 +138,10 @@
 
       .details__container[open] .details__title:before{
         rotate: 45deg;
-        /* rotate: 135deg; */
       }
 
       .details__container[open] .details__title:after{
         rotate: 135deg;
-        /* rotate: 225deg; */
       }
 
       .details__summary::marker{
