--- a/style.css
+++ b/style.css
@@ -20,7 +20,26 @@
     
     li,a{
     text-decoration:none;
+    /* fonts styles */
     }
+    .tajawal-extralight {
+      font-family: "Tajawal", sans-serif;
+      font-weight: 200;
+      font-style: normal;
+    }
+    
+    .tajawal-regular {
+      font-family: "Tajawal", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+    }
+    
+    .tajawal-bold {
+      font-family: "Tajawal", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+    }
+    
     .gradient-text {
       background: linear-gradient(90.72deg, #44649F 0%, #2DACDE 50.67%, #44649f 100.79%);
       background-clip: text;
@@ -164,4 +183,37 @@
 
       .details__desc-inner{
         min-height: 0;
+      }
+
+      .about-us-hero-section {
+        background-image: url('img/about-us-hero.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
+      .swiper-button-prev,.swiper-button-next {
+        bottom: -60px !important;
+        top: unset !important;
+        background-color: #014c7d !important;
+        color: white !important;
+        width: 2.5rem !important;
+        height: 2.5rem !important;
+        border-radius: 100%;
+      }
+      .swiper-button-prev {
+        left: 45% !important;
+      }
+      .swiper-button-next {
+        right: 45% !important;
+      }
+      @media(max-width: 890px) {
+        .swiper-button-prev {
+          left: 42% !important;
+        }
+        .swiper-button-next {
+          right: 42% !important;
+        }
+      }
+      .swiper-button-prev::after,.swiper-button-next::after {
+        font-size: 1.3rem !important;
       }
