adding waiting list pages

--- a/style.css
+++ b/style.css
@@ -217,3 +217,19 @@
       .swiper-button-prev::after,.swiper-button-next::after {
         font-size: 1.3rem !important;
       }
+
+      input#phone {
+        position: relative;
+      }
+      /* transition the modal */
+      .show-wait-list-section {
+        transition-property: visibility, opacity;
+        transition-duration: 0s, 1s;
+      }
+      .hide-wait-list-section {
+        opacity: 0;
+        visibility: hidden;
+        transition-property: opacity, visibility;
+        transition-duration: 1s, 0s;
+        transition-delay: 0s, 1s;
+      }
